--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,7 +1,7 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
 % \title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
-\title{Combining TAG based architectures with (Uni-kernels and Multi-kernels)}
+\title{FAT-Pointer based range addresses}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
@@ -58,7 +58,7 @@
 %% You can redefine the submission text:
 % Default as per the University guidelines:
 % ``This dissertation is submitted for the degree of''
-\renewcommand{\submissiontext}{Year 1 progression report of:}
+\renewcommand{\submissiontext}{Year 2 progression report of:}
 
 %% Full title of the Degree
 \degreetitle{Doctor of Philosophy}
@@ -71,5 +71,4 @@
 %\degreedate{September 2014} 
 
 %% Meta information
-\subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {University of
-Cambridge}}
+\subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {Heriot Watt}}
