--- a/thesis.tex
+++ b/thesis.tex
@@ -113,18 +113,18 @@
 
 \maketitle
 
-\include{Dedication/dedication}
-\include{Declaration/declaration}
-\include{Acknowledgement/acknowledgement}
+% \include{Dedication/dedication}
+% \include{Declaration/declaration}
+% \include{Acknowledgement/acknowledgement}
 \include{Abstract/abstract}
 
 % *********************** Adding TOC and List of Figures ***********************
 
 \tableofcontents
 
-\listoffigures
+% \listoffigures
 
-\listoftables
+% \listoftables
 
 % \printnomenclature[space] space can be set as 2em between symbol and description
 %\printnomenclature[3em]
@@ -135,11 +135,14 @@
 \mainmatter
 
 \include{Introduction/introduction}
-\include{ResearchQuestions/researchQuestions}
-\include{LiteratureReview/literatureReview}
-\include{Year1Activity/year1Activity}
-\include{ResearchTimeline/researchTimeline}
-\include{Conclusion/conclusion}
+\include{Fat-Pointer-Based-Range-Address/Fat-Pointer-Based-Range-Address}
+\include{Evaluation/evaluation}
+\include{FutureWork/futurework}
+% \include{ResearchQuestions/researchQuestions}
+% \include{LiteratureReview/literatureReview}
+% \include{Year1Activity/year1Activity}
+% \include{ResearchTimeline/researchTimeline}
+% \include{Conclusion/conclusion}
 % \include{Chapter1/chapter1}
 % \include{Chapter2/chapter2}
 % \include{Chapter3/chapter3}
