saving base background

--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -1,4 +1,4 @@
-\chapter{Evaluation}
+\chapter{Evaluation}\label{chap:evaluation}
 \ifpdf
     \graphicspath{{Evaluation/Figs/Raster/}{Evaluation/Figs/PDF/}{Evaluation/Figs/}}
 \else
@@ -28,7 +28,7 @@ memory allocator developed in this study, with particular attention to the follo
 \end{table}
 
 \subsection{Benchmarks used}:
-To conduct the evaluations, we utilized the COZ[] benchmark suite, a well-regarded tool specifically designed 
+To conduct the evaluations, we utilized the COZ\cite{curtsinger_coz_2015} benchmark suite, a well-regarded tool specifically designed 
 to measure and analyze performance improvements in concurrent programs. The COZ benchmark suite provides a
 robust framework for identifying bottlenecks and evaluating the performance impact of various optimization
 techniques. By leveraging COZ, developers can gain precise insights into the efficiency and scalability of
