--- a/References/references.bib
+++ b/References/references.bib
@@ -194,3 +194,21 @@
 	urldate = {2024-06-08},
 	file = {Getting Started with CheriBSD 23.11 - Getting Started with CheriBSD 23.11:/Users/akilan/Zotero/storage/4NSMMRDG/index.html:text/html},
 }
+
+@software{noauthor_ctsrd-cheride10pro-cheri-bgas_2024,
+	title = {{CTSRD}-{CHERI}/{DE}10Pro-cheri-bgas},
+	url = {https://github.com/CTSRD-CHERI/DE10Pro-cheri-bgas},
+	abstract = {{CHERI}-{BGAS} {DE}10Pro quartus project},
+	publisher = {Capability Hardware Enhanced {RISC} Instructions},
+	urldate = {2024-06-08},
+	date = {2024-06-03},
+	note = {original-date: 2021-06-12T01:21:35Z},
+}
+
+@article{esswood_cherios_nodate,
+	title = {{CheriOS}: designing an untrusted single-address-space capability operating system utilising capability hardware and a minimal hypervisor},
+	author = {Esswood, Lawrence G},
+	langid = {english},
+	file = {Esswood - CheriOS designing an untrusted single-address-spa.pdf:/Users/akilan/Zotero/storage/YGIBFTD5/Esswood - CheriOS designing an untrusted single-address-spa.pdf:application/pdf},
+}
+
