--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,7 @@
 % Please have a look at the README.md file for info on how to use the template
 
 \documentclass[a4paper,12pt,times,numbered,print,index]{PhDThesisPSnPDF}
+\RequirePackage{listings}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
